# pigment

./: .gitignore  .lintstagedrc  .prettierignore  .prettierrc  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg
easel-mcp/: Cargo.toml
easel-mcp/src/: easel.rs  main.rs  server.rs
src/: app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: easel.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: canvas.rs  chat.rs  mod.rs
src-tauri/src/db/: canvas.rs  chat.rs  mod.rs
src-tauri/src/migrations/: 001_initial.sql  002_drop_canvas_states.sql  mod.rs
src/components/ui/: button.tsx  command.tsx  context-menu.tsx  dialog.tsx  scroll-area.tsx  separator.tsx  toggle.tsx  tooltip.tsx
src/features/chat/: index.ts
src/features/chat/components/: chat-panel.tsx
src/features/chat/store/: chat-store.ts
src/features/chat/types/: index.ts
src/features/studio/: index.ts
src/features/studio/components/: studio-canvas.tsx  studio-command-menu.tsx  studio-delete-button.tsx  studio-gallery-dialog.tsx  studio-layer-item.tsx  studio-layers-panel.tsx  studio-properties-panel.tsx  studio-property-field.tsx  studio-settings-dialog.tsx  studio-shape-menu.tsx  studio-toolbar-button.tsx  studio-toolbar.tsx  studio-top-bar.tsx  studio-zoom-controls.tsx  studio.tsx
src/features/studio/hooks/: use-layers.ts  use-selection.ts  use-tools.ts
src/features/studio/store/: studio-store.ts  tab-store.ts
src/features/studio/types/: index.ts
src/features/studio/utils/: frame-helpers.ts
src/hooks/: use-app-init.ts  use-hotkeys.ts
src/lib/: canvas-thumbnail.ts  format-date.ts
src/lib/api/: canvas.ts  chat.ts  preferences.ts
