[package]
name = "easel-mcp"
version = "0.1.0"
edition = "2021"
description = "Standalone MCP server for .easel canvas files"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
anyhow = "1.0"
