[package]
name = "chalk"
version = "0.1.0"
description = "Chalk — AI-powered collaborative design canvas"
authors = ["you"]
edition = "2021"

[lib]
name = "chalk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
